--- a/frontend/src/styles/entity-info.css
+++ b/frontend/src/styles/entity-info.css
@@ -1,6 +1,7 @@
 .entity-info {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   width: 400px;
 
   &__section {
@@ -8,7 +9,7 @@
     display: flex;
     flex-direction: column;
 
-    margin: auto auto 10px;
+    //margin: auto auto 10px;
   }
 
   &__description {
