--- a/frontend/src/styles/entity-info.css
+++ b/frontend/src/styles/entity-info.css
@@ -18,4 +18,26 @@
   &__main-photo {
     width: 300px;
   }
+
+  &__images-list {
+    display: flex;
+    width: 100%;
+    overflow: scroll;
+    margin-bottom: 10px;
+  }
+
+  &__image-container {
+    margin-right: 20px;
+    position: relative;
+
+    img {
+      height: 300px;
+    }
+
+    .close-icon {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+  }
 }
